fix print preview and word wrap

--- a/client/assets/scss/_stash.scss
+++ b/client/assets/scss/_stash.scss
@@ -1,65 +1,74 @@
 #stash-container {
 
-  @media print {
-    .print-button {
-      visibility: hidden;
+  #print-page-wrapper {
+    max-width: 670px;
+    margin: auto;
+
+    @media print {
+      .print-button {
+        visibility: hidden;
+      }
     }
-  }
 
-  #error-message {
-    font-weight: 300;
-    font-size: 36px;
-  }
-
-  #no-snippets {
-    font-weight: 300;
-    font-size: 28px;
-    margin: auto;
-  }
-
-  .spacer {
-    height: 50px;
-  }
-
-  .card {
-    background-color: white;
-    color: black;
-  }
-
-  #snippet-table {
-    margin: auto;
-    overflow: scroll;
-
-    .author-column  {
-      min-width: 10%;
-      padding: 0;
-      font-size: 18px;
+    #error-message {
       font-weight: 300;
-    }
-
-    .content-column {
-      padding: 0;
-    }
-  }
-
-  #stash-header {
-    .stash-title {
       font-size: 36px;
+    }
+
+    #no-snippets {
       font-weight: 300;
+      font-size: 28px;
+      margin: auto;
     }
 
-    .stash-time {
-      font-size: 18px;
-      font-weight: 300;
+    .spacer {
+      height: 50px;
     }
 
-    .print-button {
-      background: none;
-      border: none;
+    .card {
+      background-color: white;
+      color: black;
     }
 
-    .print-button:hover {
-      color: grey;
+    #snippet-table {
+      margin: auto;
+
+      p {
+        margin: 5px 0;
+      }
+
+      .author-column  {
+        min-width: 10%;
+        max-width: 100px;
+        padding: 0 10px 0 0;
+        font-size: 18px;
+        font-weight: 300;
+      }
+
+      .content-column {
+        padding: 0;
+      }
+    }
+
+    #stash-header {
+      .stash-title {
+        font-size: 36px;
+        font-weight: 300;
+      }
+
+      .stash-time {
+        font-size: 18px;
+        font-weight: 300;
+      }
+
+      .print-button {
+        background: none;
+        border: none;
+      }
+
+      .print-button:hover {
+        color: grey;
+      }
     }
   }
 
